src/test/ui/dep-graph/dep-graph-variance-alias.stderr
error: OK
  --> $DIR/dep-graph-variance-alias.rs:19:1
   |
LL | #[rustc_then_this_would_need(ItemVariances)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

